workshop03/nwapp_v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nwappv2-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nwappv2-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: nwappv2-pod
      labels:
        app: nwappv2-pod
    spec:
      containers:
      - name: nwappv2-container
        image: stackupiss/northwind-app:v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: nwappv2-port
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: nwappv2-port
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: nwappv2-svc
  labels:
    app: northwind
spec:
  type: ClusterIP
  selector:
    app: nwappv2-pod
  ports:
  - name: app-port
    port: 8080
    targetPort: nwappv2-port
---
