workshop03/nwapp-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nwapp-ing
  labels:
    app: northwind
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # /$2 refers to second capture group
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/limit-rpm: "15"
spec:
  rules:
  # LoadBalancer external IP
  # Better to use v1.nwapp.<ip>.nip.io for serving web apps
  - host: v1.nwapp.167.172.6.35.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nwapp-svc
          servicePort: 8080
  - host: v2.nwapp.167.172.6.35.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nwappv2-svc
          servicePort: 8080
  # - host: nwapp.167.172.6.35.nip.io
  #   http:
  #     paths:
  #     - path: /v1(/|$)(.*)
  #       backend:
  #         serviceName: nwapp-svc
  #         servicePort: 8080
  #     - path: /v2(/|$)(.*)
  #       backend:
  #         serviceName: nwappv2-svc
  #         servicePort: 8080
